Alternative routes with CH: Use set instead of list -> faster queries